--- a/custom-addons/hr_performance_measure/views/menu.xml
+++ b/custom-addons/hr_performance_measure/views/menu.xml
@@ -1,15 +1,41 @@
-<?xml version='1.0' encoding='utf-8'?>
+<?xml version="1.0" encoding="utf-8"?>
 <odoo>
-    <!-- Menu Items -->
-    <menuitem id="menu_performance_root" name="Staff Performance Evaluation" />
-    <menuitem id="menu_performance_management" name="Performance Evaulation"
-        parent="menu_performance_root" sequence="10" />
-    <menuitem id="menu_performance_configuration" name="Configuration"
-        parent="menu_performance_root" sequence="10" />
-    <menuitem id="menu_performance_period" parent="menu_performance_configuration" name="Periods"
-        action="action_performance_period" sequence="10" />
-    <menuitem id="menu_performance_form" parent="menu_performance_configuration" name="Rating Factors"
-        action="action_performance_form" sequence="20" />
-    <menuitem id="menu_performance_measure" name="Performance Measures"
-        parent="menu_performance_management" action="action_performance_measure" sequence="10" />
+    <!-- Root Menu -->
+    <menuitem id="menu_performance_root" name="Staff Performance Evaluation" sequence="10"/>
+
+    <!-- Performance Evaluation Submenus -->
+    <menuitem id="menu_performance_management" 
+              name="Performance Evaluation" 
+              parent="menu_performance_root" 
+              sequence="10"/>
+
+    <menuitem id="menu_performance_measure" 
+              name="Performance Measures" 
+              parent="menu_performance_management" 
+              action="action_performance_measure" 
+              sequence="10"/>
+
+    <!-- Configuration Submenus -->
+    <menuitem id="menu_performance_configuration" 
+              name="Configuration" 
+              parent="menu_performance_root" 
+              sequence="20"/>
+
+    <menuitem id="menu_performance_form_template" 
+              name="Performance Form Templates" 
+              parent="menu_performance_configuration" 
+              action="action_performance_form_template" 
+              sequence="10"/>
+
+    <menuitem id="menu_performance_rating_factors" 
+              name="Rating Factors" 
+              parent="menu_performance_configuration" 
+              action="action_performance_rating_factors" 
+              sequence="20"/>
+
+    <menuitem id="menu_performance_period" 
+              name="Evaluation Periods" 
+              parent="menu_performance_configuration" 
+              action="action_performance_period" 
+              sequence="30"/>
 </odoo>
