--- a/custom-addons/planning/views/hr_annual_plan_view.xml
+++ b/custom-addons/planning/views/hr_annual_plan_view.xml
@@ -30,29 +30,40 @@
                 <sheet>
                     <header>
                         <button name="submit" type="object" string="Submit" attrs="{'invisible': [('status', '!=', 'draft')]}"/>
-                        <button name="approve" type="object" string="Approve" attrs="{'invisible': [('status', '!=', 'submitted')]}"/>
-                        <button name="reject" type="object" string="Reject" attrs="{'invisible': [('status', '!=', 'submitted')]}"/>
-                        <button name="submit" type="object" string="ReSubmit" attrs="{'invisible': [('status', '!=', 'rejected')]}"/>
+                        <button name="approve" type="object" string="Approve" attrs="{'invisible': ['|',('status', '!=', 'submitted'),('is_approver','=',False)]}"/>
+                        <button name="reject" type="object" string="Reject" attrs="{'invisible': ['|',('status', '!=', 'submitted'),('is_approver','=',False)]}"/>
+                        <button name="submit" type="object" string="ReSubmit" attrs="{'invisible': ['|',('status', '!=', 'rejected'),('is_approver','=',True)]}"/>
                         <field name="status" widget="statusbar" statusbar_visible="draft,submitted,approved,rejected"/>
                     </header>
                     <div class= "p-2">
                     </div>
 
-                    <group>
-                        <field name="is_approver" invisible="1"/>
-                        <field name="department_id" readonly="1" />
-                        <field name="submitted_to" attrs="{'readonly': ['|',('status', '!=', 'draft'),('is_approver', '=', True)]}"/>
-                        <field name="year" attrs="{'readonly': ['|',('status', '!=', 'draft'),('is_approver', '=', True)]}"/>
-                        <field name="external_recruitment" attrs="{'readonly': ['|',('status', 'in', ['submitted','approved']),('is_approver', '=', True)]}"/>
-                        <field name="promotion" attrs="{'readonly': ['|',('status', 'in', ['submitted','approved']),('is_approver', '=', True)]}"/>
-                        <field name="status" readonly="1"/>
-                        <field name="approved_by" readonly="1"/>
-                        <field name="comment" attrs="{'readonly': ['|',('is_approver', '=', False),('status', '=', 'rejected')]}"/>
-                    </group>
-                    <group>
-                        <field name="description"   attrs="{'readonly': ['|',('status', 'in', ['submitted','approved']),('is_approver', '=', True)]}"/>
-                        <field name="attachment_ids" widget="many2many_binary" attrs="{'readonly': ['|',('status', 'in', ['submitted','approved']),('is_approver', '=', True)]}"/>
-                    </group>
+                    <sheet class= "p-2">
+                        <group>
+                            <field name="is_approver" invisible="1"/>
+                            <field name="department_id" readonly="1" />
+                            <field name="submitted_to" attrs="{'readonly': ['|',('status', '!=', 'draft'),('is_approver', '=', True)]}"/>
+                            <field name="year" attrs="{'readonly': ['|',('status', '!=', 'draft'),('is_approver', '=', True)]}"/>
+                            <field name="status" readonly="1"/>
+                            <field name="approved_by" readonly="1"/>
+                            <field name="comment" attrs="{'readonly': ['|',('is_approver', '=', False),('status', '!=', 'submitted')]}"/>
+                        </group>
+                    </sheet>
+
+                    <sheet class= "p-2">
+                        <group>
+                            <field name="external_recruitment" attrs="{'readonly': ['|',('status', 'in', ['submitted','approved']),('is_approver', '=', True)]}"/>
+                            <field name="promotion" attrs="{'readonly': ['|',('status', 'in', ['submitted','approved']),('is_approver', '=', True)]}"/>
+                            <field name="total_need" readonly="1" />
+                        </group>
+                    </sheet>
+
+                    <sheet class= "p-2">
+                        <group>
+                            <field name="description"   attrs="{'readonly': ['|',('status', 'in', ['submitted','approved']),('is_approver', '=', True)]}"/>
+                            <field name="attachment_ids" widget="many2many_binary" attrs="{'readonly': ['|',('status', 'in', ['submitted','approved']),('is_approver', '=', True)]}"/>
+                        </group>
+                    </sheet>
                 </sheet>
             </form>
         </field>
