--- a/custom-addons/planning/views/hr_strategic_plan_view.xml
+++ b/custom-addons/planning/views/hr_strategic_plan_view.xml
@@ -29,9 +29,9 @@
                 <sheet>
                     <header>
                         <button name="submit" type="object" string="Submit" attrs="{'invisible': [('status', '!=', 'draft')]}"/>
-                        <button name="approve" type="object" string="Approve" attrs="{'invisible': ['|',('status', '!=', 'submitted'),('is_approver', '=', False)]}"/>
-                        <button name="reject" type="object" string="Reject" attrs="{'invisible': ['|',('status', '!=', 'submitted'),('is_approver', '=', False)]}"/>
-                        <button name="submit" type="object" string="ReSubmit" attrs="{'invisible': [('status', '!=', 'rejected')]}"/>
+                        <button name="approve" type="object" string="Approve" attrs="{'invisible': ['|',('status', '!=', 'submitted'),('is_approver','=',False)]}"/>
+                        <button name="reject" type="object" string="Reject" attrs="{'invisible': ['|',('status', '!=', 'submitted'),('is_approver','=',False)]}"/>
+                        <button name="submit" type="object" string="ReSubmit" attrs="{'invisible': ['|',('status', '!=', 'rejected'),('is_approver','=',True)]}"/>
                         <field name="status" widget="statusbar" statusbar_visible="draft,submitted,approved,rejected"/>
                     </header>
                     <div class= "p-2">
@@ -39,23 +39,21 @@
 
                     <sheet class= "p-2">
                         <group>
-                            <field name="is_approver" />
+                            <field name="is_approver" invisible="1"/>
                             <field name="department_id" readonly="1" />
                             <field name="submitted_to" attrs="{'readonly': ['|',('status', '!=', 'draft'),('is_approver', '=', True)]}"/>
                             <field name="start_year" attrs="{'readonly': ['|',('status', '!=', 'draft'),('is_approver', '=', True)]}"/>
-                            <field name="end_year" attrs="{'readonly': ['|',('status', '!=', 'draft'),('is_approver', '=', True)]}"/>
+                            <field name="end_year" readonly="1"/>
                             <field name="status" readonly="1"/>
                             <field name="approved_by" readonly="1"/>
-                            <field name="comment" attrs="{'readonly': ['|',('is_approver', '=', False),('status', '=', 'rejected')]}"/>
+                            <field name="comment" attrs="{'readonly': ['|',('is_approver', '=', False),('status', '!=', 'submitted')]}"/>
                         </group>
                     </sheet>
                     <sheet class= "p-2">
                         <group>
-                            <group>
-                                <field name="strategic_external_recruitment" />
-                                <field name="strategic_promotion"/>
-                                <field name="strategic_total_need" readonly="1"/>
-                            </group>
+                            <field name="strategic_external_recruitment" attrs="{'readonly': ['|',('status', 'in', ['submitted','approved']),('is_approver', '=', True)]}"/>
+                            <field name="strategic_promotion" attrs="{'readonly': ['|',('status', 'in', ['submitted','approved']),('is_approver', '=', True)]}"/>
+                            <field name="strategic_total_need" readonly="1"/>
                         </group>
                     </sheet>
 
