--- a/custom-addons/hr_performance_new/views/performance_measure_views.xml
+++ b/custom-addons/hr_performance_new/views/performance_measure_views.xml
@@ -1,54 +1,106 @@
 <odoo>
-    <!-- Define the Action -->
-    <record id="action_performance_measure" model="ir.actions.act_window">
-        <field name="name">Performance Measures</field>
-        <field name="res_model">hr.performance.measure</field>
-        <field name="view_mode">tree,form</field>
-        <field name="view_id" ref="view_performance_measure_tree"/> <!-- Set the default view -->
-        <field name="help" type="html">
-            <p class="o_view_nocontent_smiling_face">
-                Create and manage employee performance evaluations.
-            </p>
-        </field>
-    </record>
-
-    <!-- Tree View -->
-    <record id="view_performance_measure_tree" model="ir.ui.view">
-        <field name="name">hr.performance.measure.tree</field>
-        <field name="model">hr.performance.measure</field>
+    <record id="view_evaluation_schedule_tree" model="ir.ui.view">
+        <field name="name">hr.evaluation.schedule.tree</field>
+        <field name="model">hr.evaluation.schedule</field>
         <field name="arch" type="xml">
             <tree>
-                <field name="name"/>
-                <field name="employee_id"/>
-                <field name="manager_id"/>
-                <field name="survey_id"/>
-                <field name="evaluation_status"/>
-                <field name="response_count"/>
+                <field name="name" />
+                <field name="survey_id" />
+                <field name="scheduled_date" />
+                <field name="state" />
+                <field name="evaluations_created" />
             </tree>
         </field>
     </record>
 
-    <!-- Form View -->
-    <record id="view_performance_measure_form" model="ir.ui.view">
-        <field name="name">hr.performance.measure.form</field>
-        <field name="model">hr.performance.measure</field>
+
+    <record id="view_evaluation_schedule_form" model="ir.ui.view">
+        <field name="name">hr.evaluation.schedule.form</field>
+        <field name="model">hr.evaluation.schedule</field>
         <field name="arch" type="xml">
             <form>
                 <header>
-                    <button name="action_send_survey" type="object" string="Send Survey" class="btn-primary"/>
-                    <button name="action_view_responses" type="object" string="View Responses" class="btn-secondary"/>
+                    <button name="action_activate_schedule" type="object" string="Activate"
+                        class="btn-primary"
+                        attrs="{'invisible': [('state', '!=', 'draft')]}" />
+                    <button name="action_close_schedule" type="object" string="Close"
+                        class="btn-secondary"
+                        attrs="{'invisible': [('state', '!=', 'active')]}" />
+                    <field name="state" widget="statusbar" statusbar_visible="draft,active,closed" />
                 </header>
                 <sheet>
                     <group>
-                        <field name="name"/>
-                        <field name="employee_id"/>
-                        <field name="manager_id"/>
-                        <field name="survey_id"/>
-                        <field name="evaluation_status"/>
-                        <field name="response_count" readonly="1"/>
+                        <field name="name" />
+                        <field name="survey_id" />
+                        <field name="scheduled_date" />
+                        <field name="state" readonly="1" />
+                        <field name="evaluations_created" readonly="1" />
                     </group>
                 </sheet>
             </form>
         </field>
     </record>
+
+    <record id="action_evaluation_schedule" model="ir.actions.act_window">
+        <field name="name">Evaluation Schedules</field>
+        <field name="res_model">hr.evaluation.schedule</field>
+        <field name="view_mode">tree,form</field>
+        <field name="view_id" ref="view_evaluation_schedule_tree" /> <!-- Default view -->
+    </record>
+
+    <record id="view_performance_evaluation_tree" model="ir.ui.view">
+        <field name="name">hr.performance.evaluation.tree</field>
+        <field name="model">hr.performance.evaluation</field>
+        <field name="arch" type="xml">
+            <tree>
+                <field name="name" />
+                <field name="schedule_id" />
+                <field name="employee_id" />
+                <field name="manager_id" />
+                <field name="survey_id" />
+                <field name="evaluation_status" />
+            </tree>
+        </field>
+    </record>
+
+    <record id="view_performance_evaluation_form" model="ir.ui.view">
+        <field name="name">hr.performance.evaluation.form</field>
+        <field name="model">hr.performance.evaluation</field>
+        <field name="arch" type="xml">
+            <form>
+                <header>
+                    <button name="action_start_evaluation"
+                        type="object"
+                        string="Start Survey"
+                        class="btn-primary"
+                        attrs="{'invisible': [('evaluation_status', '!=', 'draft')]}" />
+
+                    <button name="action_mark_completed" type="object" string="Mark as Completed"
+                        class="btn-success"
+                        attrs="{'invisible': [('evaluation_status', '!=', 'in_progress')]}" />
+                    <field name="evaluation_status" widget="statusbar"
+                        statusbar_visible="draft,in_progress,completed" />
+                </header>
+                <sheet>
+                    <group>
+                        <field name="name" readonly="1" />
+                        <field name="schedule_id" readonly="1" />
+                        <field name="employee_id" readonly="1" />
+                        <field name="manager_id" readonly="1" />
+                        <field name="survey_id" readonly="1" />
+                        <field name="evaluation_status" readonly="1" />
+                    </group>
+                </sheet>
+            </form>
+        </field>
+    </record>
+
+    <record id="action_performance_evaluation" model="ir.actions.act_window">
+        <field name="name">Performance Evaluations</field>
+        <field name="res_model">hr.performance.evaluation</field>
+        <field name="view_mode">tree,form</field>
+        <field name="view_id" ref="view_performance_evaluation_tree" /> <!-- Default view -->
+    </record>
+
+
 </odoo>
