--- a/custom-addons/hr_performance_new/views/performance_measure_views.xml
+++ b/custom-addons/hr_performance_new/views/performance_measure_views.xml
@@ -59,6 +59,7 @@
                 <field name="manager_id" />
                 <field name="survey_id" />
                 <field name="evaluation_status" />
+                <field name="total_score" />
                 <field name="score" />
             </tree>
         </field>
@@ -90,8 +91,21 @@
                         <field name="manager_id" readonly="1" />
                         <field name="survey_id" readonly="1" />
                         <field name="evaluation_status" readonly="1" />
+                        <field name="total_score" readonly="1" />
+                        <field name="all_answers" widget="textarea" readonly="1" />
                         <field name="score" />
                     </group>
+                    <notebook>
+                        <page string="Survey Answers">
+                            <field name="answer_ids" nolabel="1">
+                                <tree>
+                                    <field name="question" />
+                                    <field name="answer" />
+                                    <field name="score" />
+                                </tree>
+                            </field>
+                        </page>
+                    </notebook>
                 </sheet>
             </form>
         </field>
