--- a/custom-addons/employee_promotion/views/internal_vacancy.xml
+++ b/custom-addons/employee_promotion/views/internal_vacancy.xml
@@ -14,22 +14,33 @@
         <field name="arch" type="xml">
             <form string="Internal Vacancy">
                 <sheet>
+                    <widget name="web_ribbon"
+                            title="Open"
+                            bg_color="bg-success"
+                            attrs="{'invisible': [('remaining_days', '==', 'Out of Date')]}"/>
+                
+                    <widget name="web_ribbon"
+                            title="Closed"
+                            bg_color="bg-danger"
+                            attrs="{'invisible': [('remaining_days', '!=', 'Out of Date')]}"/>
+                            
                   <header>
-                    <button name="action_apply" type="object" string="Apply"/>
+                    <button name="action_apply" type="object" string="Apply" attrs="{'invisible': [('remaining_days', '=', 'Out of Date')]}"/>
                      </header>
                     <div class="oe_title">
                         <h1>
-                            <field class="text-break" name="name" />
+                            <field class="text-break" name="name"  readonly="1"/>
   
                         </h1>
                     </div>
-                    <group>
-                        <group>
-                            <field name="job_position_id" />
-                            <field name="job_description"/>
-                            <field name="posted_by"/>
+                     <group>
+                        <field name="job_description" readonly="1"/>
+                        <field name="job_position_id" readonly="1"/>
+                        <field name="number_of_recruits" readonly="1"/>
+                        <field name="start_date" readonly="1"/>
+                        <field name="end_date" attrs="{'readonly': [('id', '!=', False)]}"/>
+                        <field name="remaining_days" invisible="1"/>
                         </group>
-                    </group>
                 </sheet>
 
             </form>
@@ -78,6 +89,13 @@
                                     <div>
                                         <field name="job_description"/>
                                     </div>
+                                    <div>
+                                   
+                                    </div>
+                                     <div class="kanban-ribbon-done"  attrs="{'invisible': [('remaining_days', '==', 'Out of Date')]}"><p><field name="remaining_days"/></p></div>
+                                     <div class="kanban-ribbon-danger"  attrs="{'invisible': [('remaining_days', '!=', 'Out of Date')]}"><p><field name="remaining_days"/></p></div>
+
+
                                 </div>
                             </div>
                         </div>
