--- a/custom-addons/hr_performance_new/views/performance_measure_views.xml
+++ b/custom-addons/hr_performance_new/views/performance_measure_views.xml
@@ -60,7 +60,6 @@
                 <field name="survey_id" />
                 <field name="evaluation_status" />
                 <field name="total_score" />
-                <field name="score" />
             </tree>
         </field>
     </record>
@@ -92,16 +91,13 @@
                         <field name="survey_id" readonly="1" />
                         <field name="evaluation_status" readonly="1" />
                         <field name="total_score" readonly="1" />
-                        <field name="all_answers" widget="textarea" readonly="1" />
-                        <field name="score" />
                     </group>
                     <notebook>
-                        <page string="Survey Answers">
+                        <page string="Evaulation Answers">
                             <field name="answer_ids" nolabel="1">
                                 <tree>
                                     <field name="question" />
                                     <field name="answer" />
-                                    <field name="score" />
                                 </tree>
                             </field>
                         </page>
@@ -116,6 +112,7 @@
         <field name="res_model">hr.performance.evaluation</field>
         <field name="view_mode">tree,form</field>
         <field name="view_id" ref="view_performance_evaluation_tree" /> <!-- Default view -->
+        <field name="domain">[('employee_id.parent_id.user_id', '=', uid)]</field>
     </record>
 
 
