--- a/custom-addons/hr_training/views/training_view.xml
+++ b/custom-addons/hr_training/views/training_view.xml
@@ -4,42 +4,45 @@
         <field name="name">hr.training.form</field>
         <field name="model">hr.training</field>
         <field name="arch" type="xml">
-            <form string="Training Management">
-                <header>
-                    <button name="action_accepted" type="object" string="Accept" groups="hr_training.group_hr_training_ceo"
-                            attrs="{'invisible': [('state', 'in', ['approved', 'refused'])]}"/>
-                    <button name="action_refused" type="object" string="Refuse" groups="hr_training.group_hr_training_ceo"
-                            attrs="{'invisible': [('state', 'in', ['approved', 'refused'])]}"/>
-                    <field name="state" widget="statusbar" statusbar_visible="new,approved,refused,taken"/>
-                </header>
-                <sheet>
-                    <div class="oe_title">
-                        <h1 class="d-flex flex-row">
-                            <field name="name" placeholder="Training Name"
-                                   required="True" style="font-size: min(4vw, 2.6rem);"/>
-                        </h1>
-                    </div>
-                    <group>
-                        <field name="start_date"/>
-                        <field name="end_date"/>
-                        <field name="department_id"/>
-                        <field name="trainer" string="Trainer"/>
-                    </group>
-                    <field name="employee_ids" string="Employees" widget="many2many_tags"/>
-                    <div>
-                        <span>Brief Description</span>
-                    </div>
-                    <div>
-                        <span>Your training name should be descriptive and clear.</span>
-                    </div>
-                    <field name="description" string="Description"/>
-                    <group>
-                        <field name="attachment_ids" widget="many2many_binary"/>
-                    </group>
-                </sheet>
+        <sheet>
+        <form string="Training management">
+            <header>
+                <button name="action_accepted" type="object" string="Accept" groups="hr_training.group_hr_training_ceo"
+                        attrs="{'invisible': [('state', 'in', ['approved', 'refused'])]}"/>
+                <button name="action_refused" type="object" string="Refuse" groups="hr_training.group_hr_training_ceo"
+                        attrs="{'invisible': [('state', 'in', ['approved', 'refused'])]}"/>
+                <field name="state" widget="statusbar" statusbar_visible="new,approved,refused,taken"/>
+            </header>
+            <div class="oe_title">
+                <h1 class="d-flex flex-row">
+                    <field name="name" placeholder="Training Name"
+                            required="True" style="font-size: min(4vw, 2.6rem);"/>
+                </h1>
+                </div>
+                <group>
+                    <field name="start_date"/>
+                    <field name="end_date"/>
+                    <field name='department_id' />
+                    <field name="trainer" string="Trainer"/>
+                </group>
+                <field placeholder="Employees" name="employee_ids" string="Employees"  widget="many2many_tags"/>
+                 <div>
+                 <label for="description" string="Breif Description"/>
+                 </div>
+                <div>
+                    <span>Your training name should be descriptive and clear.</span>
+                </div>
+                <field name='description' string='Description'/>
+                <group>
+                    <field name="attachment_ids" widget="many2many_binary"/>
+                </group>
             </form>
+        </sheet>
         </field>
     </record>
+
+
+
 
     <!-- Tree View for Training -->
     <record id="view_training_tree" model="ir.ui.view">
@@ -57,8 +60,7 @@
         </field>
     </record>
 
-    <!-- Kanban View for Training -->
-    <record id="hr_training_kanban" model="ir.ui.view">
+     <record id="hr_training_kanban" model="ir.ui.view">
         <field name="name">hr.training.view.kanban</field>
         <field name="model">hr.training</field>
         <field name="arch" type="xml">
@@ -104,16 +106,18 @@
         </field>
     </record>
 
+
+
     <!-- Action to Open the Views -->
     <record id="hr_training_action" model="ir.actions.act_window">
         <field name="name">Training Management</field>
         <field name="res_model">hr.training</field>
         <field name="view_mode">kanban,tree,form</field>
+        <field name="view_id" ref="view_training_tree"/>
     </record>
 
-    <!-- Training Dashboard Action -->
-    <record id="training_dashboard_action" model="ir.actions.client">
+    <record id="training_dashboard_action" model='ir.actions.client'>
         <field name="name">Training Dashboard</field>
-        <field name="tag">hr_training.dashboard</field>
+        <field name='tag'>hr_training.dashboard</field>
     </record>
 </odoo>
