medical pre request workflow done

--- a/custom-addons/hr_medical_coverage/views/menu.xml
+++ b/custom-addons/hr_medical_coverage/views/menu.xml
@@ -13,6 +13,14 @@
         <field name="view_mode">tree,form</field>
     </record>
 
+    <!-- action for medical pre request -->
+
+    <record id="action_medical_pre_request" model="ir.actions.act_window">
+        <field name="name">Request for Medical</field>
+        <field name="res_model">hr.medical.pre.request</field>
+        <field name="view_mode">tree,form</field>
+    </record>
+
     <!-- Main Menu for Medical Coverage -->
     <menuitem id="menu_medical_coverage_root"
         name="Manage Medical Coverage"
@@ -31,14 +39,20 @@
 
     <!-- Requests Submenu under Medical Coverage -->
     <menuitem id="menu_medical_coverage"
-        name="Requests for Coverage"
+        name="Requests for Medical Coverage"
         parent="menu_medical_coverage_root"
         action="action_medical_coverage"
+        sequence="2" />
+
+    <menuitem id="menu_medical_pre_request"
+        name="Requests for Medical"
+        parent="menu_medical_coverage_root"
+        action="action_medical_pre_request"
         sequence="2" />
 
     <menuitem id="menu_medical_coverage_organization"
         name="Organization registeration"
         parent="menu_medical_coverage_root"
         action="action_medical_coverage_organization"
-        sequence="3" />
+        sequence="4" />
 </odoo>
