--- a/custom-addons/hr_training/views/hr_request.xml
+++ b/custom-addons/hr_training/views/hr_request.xml
@@ -6,7 +6,7 @@
         <field name="arch" type="xml">
 
             <form string="HR Director Training Request">
-              <header>
+                <header>
                     <!-- approval by dco -->
                     <button name="action_approve_planning" type="object" string="Accept" groups="hr_training.group_hr_training_planning_directorate" attrs="{'invisible': [('state_by_planning', 'in', ['approved', 'refused'])]}"/>
                     <button name="action_reject_planning" type="object" string="Refuse" groups="hr_training.group_hr_training_planning_directorate" attrs="{'invisible': [('state_by_planning', 'in', ['approved', 'refused'])]}"/>
@@ -15,8 +15,8 @@
                     <button name="action_approve_ceo" type="object" string="Accept" groups="hr_training.group_hr_training_ceo" attrs="{'invisible': ['|', ('state_by_ceo', 'in', ['approved', 'refused']),  ('state_by_planning', '!=', 'approved')]}"/>
                     <button name="action_reject_ceo" type="object" string="Refuse" groups="hr_training.group_hr_training_ceo" attrs="{'invisible': ['|', ('state_by_ceo', 'in', ['approved', 'refused']),  ('state_by_planning', '!=', 'approved')]}"/>
                     <field name="combined_state" widget="statusbar" statusbar_visible="approved,refused,pending"/>
-              
-              </header>
+
+                </header>
                 <sheet>
                     <h1 class="d-flex flex-row">
                         <field name="name" placeholder="Request Name" required="True" style="font-size: min(4vw, 2.6rem);"/>
@@ -31,18 +31,13 @@
                     <field name="state_by_ceo" invisible="1"/>
                     <field name="state_by_planning" invisible="1"/>
                     <field name="combined_state" invisible="1"/>
-
-
-
                     <notebook>
                         <page string="Training Programs">
                             <field name="training_programs">
-                               <tree >  <!--  editable="bottom"-->
+                                <tree >                                    <!-- editable="bottom"-->
                                     <field name="program_name"/>
                                     <field name="departement_id"/>
                                     <field name="employee_count"/>
-                              
-                                    
                                 </tree>
                             </field>
                         </page>
@@ -51,6 +46,39 @@
             </form>
         </field>
     </record>
+
+    <record id="view_hr_training_request_kanban" model="ir.ui.view">
+        <field name="name">hrtraining.request.kanban</field>
+        <field name="model">hrtraining.request</field>
+        <field name="arch" type="xml">
+            <kanban default_group_by="combined_state" quick_create='false'>
+                <field name="combined_state"/>
+                <field name="name"/>
+                <field name="description"/>
+                <templates>
+                    <t t-name="kanban-box">
+                        <div class="oe_kanban_card" t-attf-class="oe_kanban_global_click">
+                            <div>
+                                <strong><field name="name"/></strong>
+                            </div>
+                            
+                            <div>
+                                <field name="combined_state"/>
+                            </div>
+                            
+                            
+                            <div>
+                                <field name="description" widget="text"/>
+                            </div>
+                        </div>
+                    </t>
+                </templates>
+            </kanban>
+        </field>
+    </record>
+
+
+
 
 
     <!-- Tree View for Training -->
@@ -115,8 +143,8 @@
     <record id="hrDirector_request_action" model="ir.actions.act_window">
         <field name="name">HR Director Training Plan</field>
         <field name="res_model">hrtraining.request</field>
-        <field name="view_mode">tree,form</field>
-        
+        <field name="view_mode">kanban,tree,form</field>
+
     </record>
 
 </odoo>
